<resources>
    <string name="app_name">p3</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_click_here">DON\'T HAVE AN ACCOUNT? CLICK HERE</string>
    <string name="heartastic">HEARTASTIC</string>
    <string name="login_with_google">LOGIN WITH GOOGLE</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="signup">SIGNUP</string>
    <string name="name">Name</string>
    <string name="already_have_an_account_log_in_here">Already have an account? Log in here</string>
    <string name="heartrate">Heartrate</string>
    <string name="insights">Insights</string>
    <string name="Facts">Facts</string>
    <string name="Profile">Profile</string>
    <string name="sign_out">SIGN-OUT</string>
    <string name="settings">SETTINGS</string>
    <string name="measure">MEASURE</string>
    <string name="more">MORE</string>
    <string name="pair_device_and_measure">Pair device and measure your pulse</string>
    <string name="to_change_password_enter_it_here">To change password enter it here</string>
    <string name="update_profile">Update profile</string>
    <string name="justforshow">justforshow</string>
    <string name="change_password">Change password</string>
    <string name="enter_old_password">Enter old password</string>
    <string name="enter_new_password_again">Enter new password again</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="enter_new_name_here">Enter new name here</string>
    <string name="change_name">change name</string>
    <string name="name_updated">Your name has been updated</string>
    <string name="fill_all">Please fill all fields!</string>
    <string name="change_date">CHANGE DATE</string>
    <string name="search">Search</string>
    <string name="connect">Connect</string>
    <string name="connect_hr_device">CONNECT HR-DEVICE</string>
    <string name="connection">CONNECTION</string>
    <string name="pair_measure"><![CDATA[Pair & measure]]></string>
    <string name="more1">More</string>
    <string name="justforshowsaijdioasjd">justforshowsaijdioasjd</string>
    <string name="facts_hr">What should your heart rate be when working out, and how can you keep track of it?  Find out what normal resting and maximum heart rates are for your age and how exercise intensity and other factors affect heart rate.  How do you get your heart rate in the target zone? When you work out, are you doing too much or not enough? There’s a simple way to know: Your target heart rate helps you hit the bullseye so you can get max benefit from every step, swing and squat. Even if you’re not a gym rat or elite athlete, knowing your heart rate (or pulse) can help you track your health and fitness level.  First Things First: Resting Heart Rate Your resting heart rate is the number of times your heart beats per minute when you’re at rest. A good time to check it is in the morning after you’ve had a good night’s sleep.  For most of us, between 60 and 100 beats per minute (bpm) is normal.1 The rate can be affected by factors like stress, anxiety, hormones, medication, and how physically active you are. An athlete or more active person may have a resting heart rate as low as 40 beats per minute. Now that’s chill!  When it comes to resting heart rate, lower is better. It usually means your heart muscle is in better condition and doesn’t have to work as hard to maintain a steady beat. Studies have found that a higher resting heart rate is linked with lower physical fitness and higher blood pressure and body weight.  Know Your Numbers: Maximum and Target Heart Rate. Your maximum heart rate is about 220 minus your age. Target heart rate during moderate intensity activities is about 50-70% of maximum heart rate, while during vigorous physical activity it’s about 70-85% of maximum.  The figures are averages, so use them as a general guide.  To read more about how to optimise your workout using your heart rate as a guide, visit https://www.heart.org/en/healthy-living/fitness/fitness-basics/target-heart-rates</string>
</resources>
