<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:text="@string/password"
        android:textSize="25sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edittext_password_dialog1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/enter_old_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/edittext_password_dialog2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/enter_new_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/edittext_password_dialog3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/enter_new_password_again"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button_change_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary"
        android:text="@string/change_password"
        android:textColor="@android:color/white" />
</LinearLayout>

