<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <include
        android:id="@+id/include"
        layout="@layout/app_bar"

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/search"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="90dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/button"
        android:text="@string/search"
        android:textAllCaps="true"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/connect"
        app:layout_constraintEnd_toStartOf="@+id/connect"
        app:layout_constraintStart_toStartOf="@+id/listview"
        app:layout_constraintTop_toTopOf="@+id/connect" />

    <Button
        android:id="@+id/connect"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginStart="51dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="90dp"
        android:background="@drawable/button"
        android:text="@string/connect"
        android:textAllCaps="true"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/listview"
        app:layout_constraintEnd_toEndOf="@+id/listview"
        app:layout_constraintStart_toEndOf="@+id/search"
        app:layout_constraintTop_toBottomOf="@+id/include" />


    <ListView
        android:id="@+id/listview"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search">

    </ListView>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connection"
        android:fontFamily="@font/roboto_medium"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/include"
        app:layout_constraintEnd_toEndOf="@+id/include"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/include" />


</androidx.constraintlayout.widget.ConstraintLayout>